# yellowstone-faithful

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  Cargo.toml  Dockerfile  FUNDING.json  Gemfile  LICENSE  LICENSING.md  Makefile  README.md  adapters.go  api.go  car-dag-traverser.go  cmd-car-split.go  cmd-car-split_test.go  cmd-check-deals.go  cmd-demo.go  cmd-dump-car.go  cmd-fetch.go  cmd-find-missing-tx-meta.go  cmd-merge-cars.go  cmd-rpc-server-car-getBlock.go  cmd-rpc-server-car-getSignaturesForAddress.go  cmd-rpc-server-car-getTransaction.go  cmd-rpc-server-car-getVersion.go  cmd-rpc-server-car.go  cmd-rpc-server-filecoin.go  cmd-rpc.go  cmd-test-retrievability.go  cmd-test-retrievability_test.go  cmd-version.go  cmd-x-index-all.go  cmd-x-index-cid2offset.go  cmd-x-index-cid2subsetoffset.go  cmd-x-index-gsfa.go  cmd-x-index-sig-exists.go  cmd-x-index-sig-to-epoch.go  cmd-x-index-sig2cid.go  cmd-x-index-slot2blocktime.go  (+67 more)
geyser-plugin-runner/: Cargo.toml  Makefile  README.md
geyser-plugin-runner/demo-plugin/: Cargo.toml
geyser-plugin-runner/demo-plugin/src/: lib.rs  plugin-config.json
geyser-plugin-runner/src/: README.md  block.rs  dataframe.rs  entry.rs  epoch.rs  lib.rs  main.rs  node.rs  rewards.rs  subset.rs  transaction.rs  utils.rs
jsonparsed/: Cargo.toml  transaction-wrapper.go  txstatus-dummy.go  txstatus-ffi.go  types.go
jsonparsed/src/: byte_order.rs  lib.rs  type_size.rs
old-faithful-proto/: Cargo.toml  build.rs
old-faithful-proto/old-faithful-grpc/: old-faithful.pb.go  old-faithful_grpc.pb.go  pool.go
old-faithful-proto/proto/: old-faithful.proto
old-faithful-proto/src/: lib.rs
old-faithful-proto/tests/: decode.rs  decode_confirmed_block.json  decode_confirmed_transaction.json
orchestrator/: .cursorrules  .dockerignore  .env.example  .gitignore  .npmrc  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  config.example.toml  config.local-only.toml  docker-compose.yml  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
orchestrator/deploy/: faithful-cli.Dockerfile
orchestrator/deploy/chart/: Chart.yaml  values.yaml
orchestrator/deploy/chart/charts/: redis-21.1.6.tgz
orchestrator/deploy/chart/templates/: NOTES.txt  _helpers.tpl  config.yaml  scaler-trigger.yaml  scaler.yaml  secret.yaml  service.yaml  statefulset.yaml
orchestrator/prisma/: schema.prisma  seed.ts
orchestrator/prisma/migrations/20250612145406_init/: migration.sql
orchestrator/prisma/migrations/20250612175813_add_sources_table/: migration.sql
orchestrator/prisma/migrations/20250613085312_remove_of_source_type/: migration.sql
orchestrator/scripts/: README.md  run-task.ts  update-imports.sh  update-prisma-imports.sh
orchestrator/src/: api.rs  car_report.rs  config.rs  epoch_state.rs  faithful_config.rs  lib.rs  main.rs  monitor.rs  storage.rs
orchestrator/src/__tests__/integration/: worker.test.ts
orchestrator/src/__tests__/unit/: cars.test.ts  data-sources.test.ts  solana.test.ts  utils.test.ts
orchestrator/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
orchestrator/src/app/epochs/: page.tsx
orchestrator/src/app/rpc/: page.tsx
orchestrator/src/app/settings/: page.tsx
orchestrator/src/app/sources/: page.tsx
orchestrator/src/cache/: disk.rs  error.rs  mod.rs
orchestrator/src/components/: DashboardStats.tsx  DashboardStatsWrapper.tsx  EpochDetailsDialog.tsx  EpochGrid.tsx  EpochGridWrapper.tsx  RefreshEpochButton.tsx  app-sidebar.tsx  chart-area-interactive.tsx  data-table.tsx  dynamic-breadcrumb.tsx  gsfa-index-button.tsx  nav-documents.tsx  nav-main.tsx  nav-projects.tsx  nav-secondary.tsx  query-provider.tsx  site-header.tsx  theme-provider.tsx  theme-toggle.tsx
orchestrator/src/components/layout/: header.tsx
orchestrator/src/components/rpc/: history-drawer.tsx  request-builder.tsx  response-viewer.tsx  rpc-sidebar.tsx  settings-dialog.tsx  templates.ts  types.ts  utils.ts
orchestrator/src/components/settings/: AddAllEpochsCard.tsx  AddEpochRangeCard.tsx  AddSingleEpochCard.tsx  EpochsResultAlert.tsx  EpochsStatusOverviewCard.tsx  GeneralSettingsCard.tsx  JobsCard.tsx  RecentEpochsCard.tsx
orchestrator/src/components/skeletons/: DashboardStatsSkeleton.tsx  EpochDetailsSkeleton.tsx  EpochGridSkeleton.tsx  index.ts
orchestrator/src/components/sources/: delete-source-dialog.tsx  refresh-source-button.tsx  source-dialog.tsx
orchestrator/src/components/ui/: pagination-with-links.tsx  switch.tsx
orchestrator/src/lib/: api.ts  breadcrumbs.ts  cars.ts  faktory.ts  jobs.ts  prisma.ts  solana.ts  utils.ts  worker.ts
orchestrator/src/lib/data-sources/: filesystem-source.ts  index.ts  s3-source.ts
orchestrator/src/lib/epochs/: actions.ts  check-all-sources.ts  check-epoch-exists.ts  check-gsfa-exists.ts  check-index-exists.ts  check-source.ts  data-sources-db.ts  data-sources.ts  get-epochs.ts  get-latest-epoch.ts  index.ts  run-on-all-sources.ts  (+4 more)
orchestrator/src/sources/: filesystem.ts  http.ts  local.ts  of.ts  s3.ts
orchestrator/src/types/: jest-dom.d.ts
rust-compactindex/: .gitignore  Cargo.toml  README.md
rust-compactindex/examples/: basic_usage.rs
rust-compactindex/src/: bucket.rs  header.rs  lib.rs  reader.rs  types.rs  utils.rs
rust-compactindex/src/indexes/: cid_to_offset.rs  mod.rs  sig_to_cid.rs  slot_to_cid.rs
rust-compactindex/tests/: cid_validation_test.rs  debug_lookup.rs  integration_test.rs  lookup_test.rs  real_data_test.rs
txstatus/: .gitignore  Cargo.toml  transaction-wrapper.go  txstatus-dummy.go  txstatus-ffi.go  types.go
txstatus/src/: lib.rs  reader.rs  tools.rs  type_size.rs
yellowstone-faithful-client/: Cargo.toml  build.rs
yellowstone-faithful-client/examples/: README.md  batch_get.rs  get_block.rs  get_block_time.rs  get_transaction.rs  get_version.rs  stream_blocks.rs  stream_transactions.rs
yellowstone-faithful-client/src/: config.rs  error.rs  lib.rs
yellowstone-faithful-client/src/grpc/: client.rs  generated.rs  mod.rs
yellowstone-faithful-client/src/models/: block.rs  mod.rs  transaction.rs
(+457 files in other folders)
