[workspace]
members = [
    "geyser-plugin-runner",
    "geyser-plugin-runner/demo-plugin",
    "jsonparsed",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.79"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.0"
cbor = "0.4.1"
cid = "0.11.0"
colored = "2.1.0"
const-hex = "1.12.0"
crc = "3.0.1"
crossbeam-channel = "0.5.8"
fnv = "1.0.7"
multihash = "0.19.1"
prost = { package = "prost", version = "0.13.3" }
prost_011 = { package = "prost", version = "0.11.9" }
protobuf-src = "1.1.0"
serde = "1.0.188"
serde_cbor = "0.11"
serde_json = "1.0.108"
tonic = "0.12.3"
tonic-build = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = { version ="0.3.19", features = ["fmt", "env-filter"] }
zstd = "0.13.0"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "gzip", "native-tls", "json"] }
# solana/agave dependencies:
agave-geyser-plugin-interface ="~2.0.13"
solana-accounts-db ="~2.0.13"
solana-entry ="~2.0.13"
solana-geyser-plugin-manager ="~2.0.13"
solana-rpc ="~2.0.13"
solana-runtime ="~2.0.13"
solana-sdk ="~2.0.13"
solana-storage-proto ="~2.0.13"
solana-transaction-status ="~2.0.13"
solana-transaction = "2.2.2"
agave-transaction-view = "2.2.13"
solana-sdk-ids = "2.2"
solana-message = "2.2.1"
solana-pubkey = "2.2.1"
solana-program = "2.0.13"
solana-hash = "2.0.13"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
