[workspace]
members = [
    "geyser-plugin-runner",
    "geyser-plugin-runner/demo-plugin",
    "old-faithful-proto",
    "txstatus",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.79"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.0"
cbor = "0.4.1"
cid = "0.11.0"
colored = "2.1.0"
const-hex = "1.12.0"
crc = "3.0.1"
crossbeam-channel = "0.5.8"
fnv = "1.0.7"
multihash = "0.19.1"
prost = { package = "prost", version = "0.13.3" }
prost_011 = { package = "prost", version = "0.11.9" }
protobuf-src = "1.1.0"
serde = "1.0.188"
serde_cbor = "0.11"
serde_json = "1.0.108"
# Agave
agave-geyser-plugin-interface = "3"
solana-accounts-db = "3"
solana-entry = "3"
solana-geyser-plugin-manager = "3"
solana-rpc = "3"
solana-runtime = "3"
solana-storage-proto = "3"
solana-transaction-status = "3"
# Solana SDK is separated now, see: https://github.com/anza-xyz/solana-sdk
solana-reward-info = "3"
solana-hash = "3"
solana-transaction = "3"
solana-transaction-error = "3"
solana-pubkey = "3"
solana-message = "3"
solana-clock = "3"
solana-signature = "3"
solana-commitment-config = "3"
# End of Solana SDK
tonic = "0.12.3"
tonic-build = "0.12.3"
tracing = "0.1.40"
zstd = "0.13.0"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
