[package]
name = "demo-rust-ipld-car"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
solana-transaction-status = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
cbor = { workspace = true }
cid = { workspace = true }
crc = { workspace = true }
fnv = { workspace = true }
hex = { workspace = true }
integer-encoding = { workspace = true }
multihash = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
solana-storage-proto = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }
# for geyser:
borsh = { workspace = true }
crossbeam-channel = { workspace = true }
solana-accounts-db = { workspace = true }
solana-entry = { workspace = true }
solana-geyser-plugin-manager = { workspace = true }
solana-ledger = { workspace = true }
solana-program = { workspace = true }
solana-rpc = { workspace = true }
