[package]
name = "demo-rust-ipld-car"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
cid = { workspace = true }
crc = { workspace = true }
crossbeam-channel = { workspace = true }
fnv = { workspace = true }
multihash = { workspace = true }
prost_011 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
solana-accounts-db = { workspace = true }
solana-entry = { workspace = true }
solana-geyser-plugin-manager = { workspace = true }
solana-rpc = { workspace = true }
solana-sdk = { workspace = true }
solana-storage-proto = { workspace = true }
solana-transaction-status = { workspace = true }
zstd = { workspace = true }
