[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"
default-run = "orchestrator"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
once_cell = "1.19"
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1.40", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
