[package]
name = "yellowstone-compactindex"
version = "0.1.0"
edition = "2021"
authors = ["Yellowstone Faithful Contributors"]
description = "Rust implementation of compactindexsized format for yellowstone-faithful"
license = "AGPL-3.0"
repository = "https://github.com/rpcpool/yellowstone-faithful"

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh64"] }
byteorder = "1.5"
memmap2 = "0.9"
thiserror = "1.0"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
unsigned-varint = "0.7"
base58 = "0.2"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "dump_slots"
path = "src/bin/dump_slots.rs"

[[bin]]
name = "analyze_index"
path = "src/bin/analyze_index.rs"

[[bin]]
name = "fetch_block"
path = "src/bin/fetch_block.rs"