[package]
name = "demo-transaction-status-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.2"
chrono = "0.4.19"
bs58 = "0.4.0"
serde_json = "1.0.107"
byteorder = "1.4.3"
solana-transaction-status = "1.16.13"
solana-sdk = "1.16.13"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
# If you only wanted shared lib, you'd use only "cdylib".
# If you only wanted static lib, you'd use only "staticlib".
# This demo shows both.
crate-type = ["staticlib", "cdylib"]

[profile.release]
lto = true
codegen-units = 1
