[package]
name = "demo-plugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
colored = { workspace = true }
solana-geyser-plugin-interface = { workspace = true }
tracing = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
